feat : readme 추가 및 Test Code 추가

--- a/check.ipynb
+++ b/check.ipynb
@@ -9,8 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      " \n"
+      "병역지정업체명\u0002부서\u0002생년월일\u0002성명\u0002시작일자\u0002종료일자\u0002월요일시작\u0002월요일종료\u0002화요일시작\u0002화요일종료\u0002화요일시간\u0002수요일시작\u0002수요일종료\u0002수요일시간\u0002목요일시작\u0002목요일종료\u0002목요일시간\u0002금요일시작\u0002금요일종료\u0002금요일시간\u0002공동근무시작시간\u0002공동근무종료시간\u0002공동근무종합시간\u0002신청일자\u0002확인서명\n"
      ]
     }
    ],
@@ -22,7 +21,7 @@
     "BASE_PATH = os.getcwd()\n",
     "hwp = win32.gencache.EnsureDispatch(\"HWPFrame.HwpObject\")\n",
     "\n",
-    "hwp.RegisterModule(\"FilePathCheckDLL\", \"FilePathCheckerModule\")\n",
+    "hwp.RegisterModule(\"FilePathCheckDLL\", \"AutomationModule\")\n",
     "\n",
     "hwp.Open(BASE_PATH + \"/유연근무제 신청(변경)서.hwp\")\n",
     "hwp.XHwpWindows.Item(0).Visible = True\n",
