Feat: Make Func.

--- a/check.ipynb
+++ b/check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -16,25 +16,19 @@
    "source": [
     "import os\n",
     "import win32com.client as win32\n",
-    "\n",
+    "import shutil\n",
     "\n",
     "BASE_PATH = os.getcwd()\n",
-    "hwp = win32.gencache.EnsureDispatch(\"HWPFrame.HwpObject\")\n",
+    "shutil.copyfile(r\"./유연근무제 신청(변경)서.hwp\", r\"./유연근무제 신청(변경)서_수정.hwp\")\n",
     "\n",
+    "hwp = win32.gencache.EnsureDispatch(\"HWPFrame.HwpObject\")\n",
     "hwp.RegisterModule(\"FilePathCheckDLL\", \"AutomationModule\")\n",
     "\n",
-    "hwp.Open(BASE_PATH + \"/유연근무제 신청(변경)서.hwp\")\n",
+    "hwp.Open(BASE_PATH + \"/유연근무제 신청(변경)서_수정.hwp\")\n",
     "hwp.XHwpWindows.Item(0).Visible = True\n",
     "print(hwp.GetFieldList())\n",
     "\n",
-    "# hwp.Run(\"SelectAll\")  # Ctrl-A (전체선택)\n",
-    "# hwp.Run(\"Copy\")  # Ctrl-C (복사)\n",
-    "# hwp.MovePos(3)  # 문서 끝으로 이동\n",
-    "\n",
-    "# # 8. 내용 붙여넣기\n",
-    "# for i in range(3):\n",
-    "#     hwp.Run(\"Paste\")  # Ctrl-V (붙여넣기)\n",
-    "#     hwp.MovePos(3)  # 문서 끝으로 이동"
+    "hwp.PutFieldText()"
    ]
   }
  ],
