update pdf save

--- a/check.ipynb
+++ b/check.ipynb
@@ -18,17 +18,26 @@
     "import win32com.client as win32\n",
     "import shutil\n",
     "\n",
-    "BASE_PATH = os.getcwd()\n",
-    "shutil.copyfile(r\"./유연근무제 신청(변경)서.hwp\", r\"./유연근무제 신청(변경)서_수정.hwp\")\n",
+    "def makeHwp(inputVal):\n",
+    "    BASE_PATH = os.getcwd()\n",
+    "    shutil.copyfile(r\"./유연근무제 신청(변경)서.hwp\", r\"./유연근무제 신청(변경)서_수정.hwp\")\n",
     "\n",
-    "hwp = win32.gencache.EnsureDispatch(\"HWPFrame.HwpObject\")\n",
-    "hwp.RegisterModule(\"FilePathCheckDLL\", \"AutomationModule\")\n",
+    "    hwp = win32.gencache.EnsureDispatch(\"HWPFrame.HwpObject\")\n",
+    "    hwp.RegisterModule(\"FilePathCheckDLL\", \"AutomationModule\")\n",
     "\n",
-    "hwp.Open(BASE_PATH + \"/유연근무제 신청(변경)서_수정.hwp\")\n",
-    "hwp.XHwpWindows.Item(0).Visible = True\n",
-    "print(hwp.GetFieldList())\n",
+    "    hwp.Open(BASE_PATH + \"/유연근무제 신청(변경)서_수정.hwp\")\n",
+    "    hwp.XHwpWindows.Item(0).Visible = True\n",
+    "    \n",
+    "    for key in inputVal:\n",
+    "        hwp.PutFieldText(key, inputVal[key])\n",
     "\n",
-    "hwp.PutFieldText()"
+    "def pdf로_저장(이름, 소속):\n",
+    "    hwp.HAction.GetDefault(\"FileSaveAsPdf\", hwp.HParameterSet.HFileOpenSave.HSet)\n",
+    "\thwp.HParameterSet.HFileOpenSave.filename = \\\n",
+    "    f\"C:\\\\Users\\\\smj02\\\\Desktop\\\\청구서모음\\\\청구서_{이름}({소속}).pdf\"\n",
+    "\thwp.HParameterSet.HFileOpenSave.Format = \"PDF\"\n",
+    "\thwp.HParameterSet.HFileOpenSave.Attributes = 16384\n",
+    "\thwp.HAction.Execute(\"FileSaveAsPdf\", hwp.HParameterSet.HFileOpenSave.HSet)"
    ]
   }
  ],
